minor twitter fix (searchbar styling!)

--- a/css/twitter.css
+++ b/css/twitter.css
@@ -22,3 +22,15 @@
 .tweetpanel{
 	padding-bottom: 0px!important
 }
+.form-control{
+	border-top-right-radius: 15px;
+	border-top-left-radius: 15px;
+	border-bottom-left-radius: 15px;
+	border-bottom-right-radius: 15px;
+}
+.twitterbtn{
+	border-top-right-radius: 15px;
+	border-top-left-radius: 15px;
+	border-bottom-left-radius: 15px;
+	border-bottom-right-radius: 15px;
+}
